--- a/Pages/Restaurants/List.cshtml
+++ b/Pages/Restaurants/List.cshtml
@@ -1,8 +1,9 @@
 @page
 @model OdeToFood.Pages.Restaurants.ListModel
 @{
-    ViewData["Title"] = "List";
+    @* ViewData["Title"] = "List"; *@
 }
 
-<h1>List</h1>
+<h1>Restaurants</h1>
 
+@Model.Message;
