--- a/Pages/Restaurants/List.cshtml
+++ b/Pages/Restaurants/List.cshtml
@@ -1,9 +1,18 @@
 @page
-@model OdeToFood.Pages.Restaurants.ListModel
+@model ListModel
 @{
     @* ViewData["Title"] = "List"; *@
 }
 
 <h1>Restaurants</h1>
-
-@Model.Message;
+    <table class="table">
+        @foreach (var restaurant in Model.Restaurants)
+        {
+            <tr>
+                <td>@restaurant.Name</td>
+                <td>@restaurant.Location</td>
+                <td>@restaurant.Cuisine</td>
+            </tr>
+        }
+    </table>
+<div>@Model.Message</div>
