--- a/Pages/Restaurants/List.cshtml
+++ b/Pages/Restaurants/List.cshtml
@@ -56,4 +56,5 @@
             </tr>
         }
     </table>
+    <a asp-page=".\Edit" class="btn btn-primary">Add New</a>
 <div>@Model.Message</div>
